--- a/app/[locale]/globals.css
+++ b/app/[locale]/globals.css
@@ -5,7 +5,7 @@
 .custom-calendar {
   max-width: 100%;
   background: white;
-  font-family: var(--font-vazirmatn), Arial, Helvetica, sans-serif;
+  font-family: var(--font-vazirmatn), var(--font-sf), Arial, Helvetica, sans-serif;
   line-height: 1.125em;
   
   box-shadow: none !important;
